--- a/css/index_style.css
+++ b/css/index_style.css
@@ -6,6 +6,9 @@
 *{
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 /* --------------left Nav-------- */
 .mobileDropDown{
   z-index: 10;
@@ -14,8 +17,8 @@
   border-right: 1px rgba(196, 161, 101, .5) solid;
   height: 100vh;
   width: 20vw;
-  right: -20rem;
-  transition: right .25s ease-in-out;
+  right: -50rem;
+  transition: right .35s ease-in-out;
 }
 
 .mobileDropDown a{
@@ -24,7 +27,7 @@
 
 @media (max-width: 768px) { 
  .mobileDropDown{
-  width: 40vw;
+  width: 70vw;
 }
 }
 /* --------------left Nav-------- */
@@ -40,22 +43,48 @@
 /* ---------------Hero Section---------------- */
 h2.companyname{
   font-family: DreamAvenue, sans-serif;
-  margin-top: 1.75em;
+  margin-top: .5em;
 }
 
 .herobg{
   /* background-image:linear-gradient(90deg, rgba(0,0,0,.85) 50%, rgba(255, 255, 255, 0.5) 100%),url('../imgs/herobg1.jpg') ; */
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   background-position: center center;
 }
 
+.herobg img{
+  width: 150px;
+}
+
+
+#slide1{
+  background-image:linear-gradient(90deg,  rgba(0,0,0,.6) 100%,rgba(0, 0, 0, 0.5) 30%),url('../imgs/herobg1.jpg');
+}
 #slide2{
-  background-image:linear-gradient(90deg, rgba(0,0,0,.85) 50%, rgba(255, 255, 255, 0.5) 100%),url('../imgs/features/hole_in_the_wall.jpg') ;
+  background-image:linear-gradient(90deg,  rgba(0,0,0,.6) 100%,rgba(0, 0, 0, 0.5) 30%),url('../imgs/herobg2.jpg') ;
+  
 }
 #slide3{
-  background-image:linear-gradient(90deg, rgba(0,0,0,.85) 50%, rgba(255, 255, 255, 0.5) 100%),url('../imgs/features/clubhouse.jpg') ;
+  background-image:linear-gradient(90deg,  rgba(0,0,0,.6) 100%,rgba(0, 0, 0, 0.5) 30%),url('../imgs/herobg3.jpg') ;
+
+}
+
+@media only screen and (max-width:425px) {
+  #slide1{
+  background-image:linear-gradient(90deg,  rgba(0,0,0,.6) 100%,rgba(0, 0, 0, 0.5) 30%),url('../imgs/herobgsm1.jpg');
+
+  }
+  #slide2{
+  background-image:linear-gradient(90deg,  rgba(0,0,0,.6) 100%,rgba(0, 0, 0, 0.5) 30%),url('../imgs/herobgsm2.jpg') ;
+  padding-bottom: -15px; 
+    
+  }
+  #slide3{
+  background-image:linear-gradient(90deg,  rgba(0,0,0,.6) 100%,rgba(0, 0, 0, 0.5) 30%),url('../imgs/herobgsm3.jpg') ;
+  padding-bottom: -35px;   
+}
 }
 
 .contactModalDiv{
@@ -89,6 +118,20 @@ h2.companyname{
 }
 
 /* ---------------------------------
+-------------About Us---------------------
+-------------------------------- */
+#about div#left{
+  width: 70%;
+}
+#about img#right{
+  width: 30%;
+}
+@media only screen and (max-width:900px) {
+  #about img#right{
+    content: url('../imgs/risingsm.jpg');
+  }
+}
+/* ---------------------------------
 -------------Features---------------------
 -------------------------------- */
 
@@ -109,4 +152,13 @@ h2.companyname{
   background-size: cover;
   background-position: center center;
   padding: .75em;
+}
+
+.card:nth-child(1){
+  background-image: linear-gradient(0deg, rgba(0,0,0,1) 19%, rgba(0, 0, 0, 0.1) 100%),url('../imgs/clubhouse.jpg');
+}
+
+.card:nth-child(2){
+  background-image: linear-gradient(0deg, rgba(0,0,0,1) 19%, rgba(0, 0, 0, 0.1) 100%),url('../imgs/projectBg1.jpg');
+
 }
