--- a/css/northern_colombia.css
+++ b/css/northern_colombia.css
@@ -14,8 +14,8 @@
   border-right: 1px rgba(196, 161, 101, .5) solid;
   height: 100vh;
   width: 20vw;
-  right: -20rem;
-  transition: right .25s ease-in-out;
+  right: -40rem;
+  transition: right .35s ease-in-out;
 }
 
 .mobileDropDown a{
@@ -24,7 +24,7 @@
 
 @media (max-width: 768px) { 
  .mobileDropDown{
-  width: 40vw;
+  width: 70vw;
 }
 }
 /* --------------left Nav-------- */
@@ -42,17 +42,17 @@ h2.companyname{
   font-family: DreamAvenue, sans-serif;
   margin-top: 1.75em;
 }
-
+/* 
 .herobg{
   background-image:linear-gradient(90deg, rgba(0,0,0,.85) 50%, rgba(255, 255, 255, 0.5) 100%),url('../imgs/herobg1.jpg') ;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: center center;
-}
+} */
 
 
-.contactModalDiv{
+ .contactModalDiv{
   backdrop-filter: blur(3px);
   display: grid;
   opacity: 0;
@@ -80,19 +80,19 @@ h2.companyname{
   position: absolute;
   top: 2px;
   right: 2px;
-}
+} */
 
 /* ---------------------------------
 -------------Features---------------------
 -------------------------------- */
 
-.cardsDiv{
+/* .cardsDiv{
   background-image: url('../imgs/herobg1.jpg') ;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: center center;
-}
+} */
 #innerCardsDiv{
   backdrop-filter: blur(1px);
   background: rgba(0, 0, 0, 0.5);
